tests/outputs/test_diags_2.txt
Hi, it is a D&D shell!
D&D > roll d
Error: Expected dice size
d
 ^
D&D > exit
Bye!